2007-10-06  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Fix detection of Windows for Boost.
	* ax_boost.m4,
	* ax_boost_thread.m4: Look for `mingw32' and not `ming32'.  Also
	handle cygwin.

2007-10-05  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Do the float-function checks in C++ mode.
	* urbi-float-check.m4 (URBI_FLOAT_CHECK): Here.

2007-10-05  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Change the search order for Boost.
	* ax_boost_base.m4 (AX_BOOST_BASE): Change the search order
	from `/usr /usr/local /opt /opt/local'
	to   `/usr/local /opt/local /usr /opt'.  Rationale: There could be a
	version of boost installed under /usr (typically by the packaging
	system) overridden manually by the administrator (typically under
	/usr/local).  That's why it's better to have /usr and /opt at the
	end.

2007-10-04  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Check for the `trunc' function.
	Like `round', it is not available on mipsel-linux-g++.
	* urbi-float-check.m4 (URBI_FLOAT_CHECK): Here.
	* urbi-libport.m4 (_URBI_LIBPORT_COMMON): Invoke URBI_FLOAT_CHECK.
	* urbi-ufloat.m4 (URBI_UFLOAT): No longer invoke URBI_FLOAT_CHECK.

2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add a check for the `round' function.
	* urbi-float-check.m4: New.
	* urbi-ufloat.m4 (URBI_UFLOAT): Invoke URBI_FLOAT_CHECK.

2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Use an AM_CONDITIONAL to install (or not) the Doxygen doc.
	* doxygen.mk: Use the ENABLE_DOC conditional.
	* urbi-doc.m4 (ENABLE_DOC): Create an AM_CONDITIONAL of the same
	name.

2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Don't try to use Boost.Thread when OpenR is in use.
	* urbi-libport.m4 (_URBI_LIBPORT_COMMON): Here.

2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Fix a greedy commit when updating externals.
	* svn-externals.mk (externals-up-ci): Do a non-recursive commit.

2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Allow a way to disable hard errors.
	* check.mk (ENABLE_HARD_ERRORS): New.
